--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  Queen of the Black Coast
-  By Robert E. Howard, 1934
+  <h1>Queen of the Black Coast</h1>
+  <h2>By Robert E. Howard, 1934</h2>
+  <h3>1. Conan Joins the Pirates</h3>
 
-  1. Conan Joins the Pirates
-
-  Believe green buds awaken in the spring,
+  <p><blockquote>Believe green buds awaken in the spring,
   That autumn paints the leaves with somber fire;
   Believe I held my heart inviolate
-  To lavish on one man my hot desire.
-  — The Song of Bélit
-
-  Hoofs drummed down the street that sloped to the wharfs. The folk that yelled and scattered had only a fleeting glimpse of a mailed figure on a black stallion, a wide scarlet cloak flowing out on the wind. Far up the street came the shout and clatter of pursuit, but the horseman did not look back. He swept out onto the wharfs and jerked the plunging stallion back on its haunches at the very lip of the pier. Seamen gaped up at him, as they stood to the sweep and striped sail of a high-prowed, broad-waisted galley. The master, sturdy and black-bearded, stood in the bows, easing her away from the piles with a boat-hook. He yelled angrily as the horseman sprang from the saddle and with a long leap landed squarely on the mid-deck.
-  “Who invited you aboard?”
-  “Get under way!” roared the intruder with a fierce gesture that spattered red drops from his broadsword.
-  “But we’re bound for the coasts of Kush!” expostulated the master.
+  To lavish on one man my hot desire.</blockquote></p>
+  <p><cite>— The Song of Bélit</cite></p>
+  <p>Hoofs drummed down the street that sloped to the wharfs. The folk that yelled and scattered had only a fleeting glimpse of a mailed figure on a black stallion, a wide scarlet cloak flowing out on the wind. Far up the street came the shout and clatter of pursuit, but the horseman did not look back. He swept out onto the wharfs and jerked the plunging stallion back on its haunches at the very lip of the pier. Seamen gaped up at him, as they stood to the sweep and striped sail of a high-prowed, broad-waisted galley. The master, sturdy and black-bearded, stood in the bows, easing her away from the piles with a boat-hook. He yelled angrily as the horseman sprang from the saddle and with a long leap landed squarely on the mid-deck.</p>
+  <p><q>“Who invited you aboard?”</q></p>
+  <p><q>“Get under way!”</q> roared the intruder with a fierce gesture that spattered red drops from his broadsword.</p>
+  <p><q>“But we’re bound for the coasts of Kush!”</q> expostulated the master.</p>
   “Then I’m for Kush! Push off, I tell you!” The other cast a quick glance up the street, along which a squad of horsemen were galloping; far behind them toiled a group of archers, crossbows on their shoulders.
   “Can you pay for your passage?” demanded the master.
   “I pay my way with steel!” roared the man in armor, brandishing the great sword that glittered bluely in the sun. “By Crom, man, if you don’t get under way, I’ll drench this galley in the blood of its crew!”
