--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <article>
-    <h1>Queen of the Black Coast</h1>
-    <h2>By Robert E. Howard, 1934</h2>
+    <h1 class="push-0">Queen of the Black Coast</h1>
+    <h2 class="push-0">By Robert E. Howard, 1934</h2>
+    <br><hr></hr></br>
     <h3>1. Conan Joins the Pirates</h3>
 
     <p><blockquote>Believe green buds awaken in the spring,
