--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <article>
-    <h1 class="push-0">Queen of the Black Coast</h1>
-    <h2 class="push-0">By Robert E. Howard, 1934</h2>
+  <article class="pad-t">
+    <div class="text-center">
+      <h1 class="push-0 text-upper not-bold giga">Queen of the Black Coast</h1>
+      <h2 class="push-0 not-bold italic kilo">By Robert E. Howard, 1934</h2>
+    </div>
     <br><hr></hr></br>
     <h3>1. Conan Joins the Pirates</h3>
 
