--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <article class="pad-t">
+  <article class="pad-t island-1-2">
     <div class="text-center">
       <h1 class="push-0 text-upper not-bold giga">Queen of the Black Coast</h1>
       <h2 class="push-0 not-bold italic kilo">By Robert E. Howard, 1934</h2>
@@ -16,11 +16,11 @@
     <br><hr></hr></br>
     <h3>1. Conan Joins the Pirates</h3>
 
-    <p><blockquote>Believe green buds awaken in the spring,
-    That autumn paints the leaves with somber fire;
-    Believe I held my heart inviolate
-    To lavish on one man my hot desire.</blockquote></p>
-    <p><cite>— The Song of Bélit</cite></p>
+    <p><blockquote class="push-0 italic">Believe green buds awaken in the spring,
+    That autumn paints the leaves with somber fire;</blockquote>
+    <blockquote class="push-0 italic">Believe I held my heart inviolate
+    To lavish on one man my hot desire.</blockquote>
+    <cite class="not-italic">— The Song of Bélit</cite></p>
     <p>Hoofs drummed down the street that sloped to the wharfs. The folk that yelled and scattered had only a fleeting glimpse of a mailed figure on a black stallion, a wide scarlet cloak flowing out on the wind. Far up the street came the shout and clatter of pursuit, but the horseman did not look back. He swept out onto the wharfs and jerked the plunging stallion back on its haunches at the very lip of the pier. Seamen gaped up at him, as they stood to the sweep and striped sail of a high-prowed, broad-waisted galley. The master, sturdy and black-bearded, stood in the bows, easing her away from the piles with a boat-hook. He yelled angrily as the horseman sprang from the saddle and with a long leap landed squarely on the mid-deck.</p>
     <p>“Who invited you aboard?”</p>
     <p>“Get under way!” roared the intruder with a fierce gesture that spattered red drops from his broadsword.</p>
@@ -35,7 +35,8 @@
     <p>“If we must travel together,” said the master, “we may as well be at peace with each other. My name is Tito, licensed master-shipman of the ports of Argos. I am bound for Kush, to trade beads and silks and sugar and brass-hilted swords to the black kings for ivory, copra, copper ore, slaves and pearls.”</p>
     <p>The swordsman glanced back at the rapidly receding docks, where the figures still gesticulated helplessly, evidently having trouble in finding a boat swift enough to overhaul the fast-sailing galley.</p>
     <p>“I am Conan, a Cimmerian,” he answered. “I came into Argos seeking employment, but with no wars forward, there was nothing to which I might turn my hand.”</p>
-    <footer>…</footer>
+    <footer class="push-1-2">…</footer>
+    <br><hr></hr></br>
   </article>
 </body>
 </html>
