--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     </div>
     <br><hr></hr></br>
     <h3>1. Conan Joins the Pirates</h3>
-
-    <p><blockquote class="push-0 italic">Believe green buds awaken in the spring,
-    That autumn paints the leaves with somber fire;</blockquote>
-    <blockquote class="push-0 italic">Believe I held my heart inviolate
-    To lavish on one man my hot desire.</blockquote>
-    <cite class="not-italic">— The Song of Bélit</cite></p>
+    <div class="wrapper">
+      <blockquote class="max-length">
+        <p class="hang-punc push-0 italic">Believe green buds awaken in the spring,
+        That autumn paints the leaves with somber fire;</p>
+        <p class="push-0 italic">Believe I held my heart inviolate
+        To lavish on one man my hot desire.</p>
+        <cite class="not-italic">— The Song of Bélit</cite>
+      </blockquote>
+    </div>
     <p>Hoofs drummed down the street that sloped to the wharfs. The folk that yelled and scattered had only a fleeting glimpse of a mailed figure on a black stallion, a wide scarlet cloak flowing out on the wind. Far up the street came the shout and clatter of pursuit, but the horseman did not look back. He swept out onto the wharfs and jerked the plunging stallion back on its haunches at the very lip of the pier. Seamen gaped up at him, as they stood to the sweep and striped sail of a high-prowed, broad-waisted galley. The master, sturdy and black-bearded, stood in the bows, easing her away from the piles with a boat-hook. He yelled angrily as the horseman sprang from the saddle and with a long leap landed squarely on the mid-deck.</p>
     <p>“Who invited you aboard?”</p>
     <p>“Get under way!” roared the intruder with a fierce gesture that spattered red drops from his broadsword.</p>
