Add margin to the second title

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h2 class="push-0 not-bold italic kilo">By Robert E. Howard, 1934</h2>
     </div>
     <br><hr></hr></br>
-    <h3>1. Conan Joins the Pirates</h3>
-    <div class="wrapper">
-      <blockquote class="max-length">
+    <h3 class="push-2 mega">1. Conan Joins the Pirates</h3>
+    <div class="max-length">
+      <blockquote class="">
         <p class="hang-punc push-0 italic">Believe green buds awaken in the spring,
         That autumn paints the leaves with somber fire;</p>
         <p class="push-0 italic">Believe I held my heart inviolate
