--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <article class="pad-t gutter-1-2 wrapper">
+  <div class="pad-t gutter-1-2 wrapper">
     <div class="max-length">
-      <div class"wrapper">
+      <article>
         <div class="max-length">
           <div class="text-center push">
             <h1 class="push-0 text-upper not-bold giga">Queen of the Black Coast</h1>
             <h2 class="push-0 not-bold italic milli">By Robert E. Howard, 1934</h2>
           </div>
-          <hr class="push-2"></hr>
+          <hr class="push-2">
           <h3 class="push-2 mega">1. Conan Joins the Pirates</h3>
           <div>
             <div>
@@ -46,11 +46,11 @@
           <p>“If we must travel together,” said the master, “we may as well be at peace with each other. My name is Tito, licensed master-shipman of the ports of Argos. I am bound for Kush, to trade beads and silks and sugar and brass-hilted swords to the black kings for ivory, copra, copper ore, slaves and pearls.”</p>
           <p>The swordsman glanced back at the rapidly receding docks, where the figures still gesticulated helplessly, evidently having trouble in finding a boat swift enough to overhaul the fast-sailing galley.</p>
           <p>“I am Conan, a Cimmerian,” he answered. “I came into Argos seeking employment, but with no wars forward, there was nothing to which I might turn my hand.”</p>
-          <footer class="push-1-2">…</footer>
-          <br><hr></hr></br>
+          <footer class="push-2">…</footer>
+          <hr>
         </div>
-      </div>
+      </article>
     </div>
-  </article>
+  </div>
 </body>
 </html>
