Add additional formatting to the document

--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
     <div class="max-length">
       <article>
         <div class="max-length">
-          <div class="text-center push">
-            <h1 class="push-0 text-upper not-bold giga">Queen of the Black Coast</h1>
-            <h2 class="push-0 not-bold italic milli">By Robert E. Howard, 1934</h2>
-          </div>
+          <header>
+            <div class="text-center push">
+              <h1 class="push-0 text-upper not-bold giga">Queen of the Black Coast</h1>
+              <p class="push-0 not-bold italic milli">By Robert E. Howard, 1934</p>
+            </div>
+          </header>
           <hr class="push-2">
-          <h3 class="push-2 mega">1. Conan Joins the Pirates</h3>
+          <p class="push-2 mega bold">1. Conan Joins the Pirates</p>
           <div>
-            <div>
+            <div class="push">
               <blockquote class="push-0 milli">
                 <p class="push-0 italic">Believe green buds awaken in the spring,</p>
                 <p class="push-0 italic">That autumn paints the leaves with somber fire;</p>
                 <p class="push-0 italic">Believe I held my heart inviolate</p>
                 <p class="push-0 italic">To lavish on one man my hot desire.</p>
+                <footer>
+                  <cite class="not-italic">— The Song of Bélit</cite>
+                </footer>
               </blockquote>
-              <div>
-                <cite class="not-italic">— The Song of Bélit</cite>
-              </div>
             </div>
           </div>
           <br>
